encoding/jsonschema/testdata/generate/callop.txtar
-- test.cue --
package test

import (
	"strings"
	"math"
	"time"
)

// String rune constraints
shortString?: strings.MaxRunes(10)
longString?: strings.MinRunes(5)

// Math constraints
multiple?: math.MultipleOf(5)

// Time format constraints
dateTime?: time.Format("2006-01-02T15:04:05Z07:00")
date?: time.Format("2006-01-02")
timeOnly?: time.Format("15:04:05")

// Combined constraints
userName?: string & strings.MinRunes(3) & strings.MaxRunes(20)
score?: int & math.MultipleOf(10)
-- datatest/tests.cue --
package datatest

ok: data: {
	shortString: "foo"
	longString:  "longer string"
	multiple:    20
	dateTime:    "2025-10-02T13:26:30+01:00"
	date:        "2025-10-02"
	timeOnly:    "13:26:30"
	userName:    "roger"
	score:       200
}
stringTooLong: {
	data: shortString: "01234567890"
	error: true
}
stringTooShort: {
	data: longString: "x"
	error: true
}
notMultiple: {
	data: multiple: 1
	error: true
}
badDateTime: {
	data: dateTime: "2025-10-02T13"
	error: true
}
badDate: {
	data: date: "2025-10-40"
	error: true
}
badTime: {
	data: date: "25:00:10"
	error: true
}
badUserName: {
	data: userName: "x"
	error: true
}
badScore2: {
	data: score: 5
	error: true
}
-- out/generate-v3/schema --
{
	$schema: "https://json-schema.org/draft/2020-12/schema"
	properties: {
		date: {
			format: "date"
			type:   "string"
		}
		dateTime: {
			format: "date-time"
			type:   "string"
		}
		longString: {
			minLength: 5
			type:      "string"
		}
		multiple: {
			multipleOf: 5.0
			type:       "number"
		}
		score: {
			allOf: [{
				multipleOf: 1e+1
				type:       "number"
			}, {
				type: "integer"
			}]
		}
		shortString: {
			maxLength: 10
			type:      "string"
		}
		timeOnly: {
			format: "time"
			type:   "string"
		}
		userName: {
			allOf: [{
				maxLength: 20
				type:      "string"
			}, {
				minLength: 3
				type:      "string"
			}]
		}
	}
	type: "object"
}
-- out/generate-v3/badDate --
badDate.data.date: invalid value "2025-10-40" (does not satisfy time.Format("2006-01-02")): error in call to time.Format: invalid time "2025-10-40":
    1:81
    ./datatest/tests.cue:30:14
-- out/generate-v3/badDateTime --
badDateTime.data.dateTime: invalid value "2025-10-02T13" (does not satisfy time.Time): error in call to time.Time: invalid time "2025-10-02T13":
    1:126
    ./datatest/tests.cue:26:18
-- out/generate-v3/badScore2 --
badScore2.data.score: invalid value 5 (does not satisfy matchN): 1 matched, expected 2:
    1:262
    ./datatest/tests.cue:42:15
badScore2.data.score: invalid value 5 (does not satisfy math.MultipleOf(1E+1)):
    1:272
    1:262
    ./datatest/tests.cue:42:15
-- out/generate-v3/badTime --
badTime.data.date: invalid value "25:00:10" (does not satisfy time.Format("2006-01-02")): error in call to time.Format: invalid time "25:00:10":
    1:81
    ./datatest/tests.cue:34:14
-- out/generate-v3/badUserName --
badUserName.data.userName: invalid value "x" (does not satisfy matchN): 1 matched, expected 2:
    1:432
    ./datatest/tests.cue:38:18
badUserName.data.userName: invalid value "x" (does not satisfy strings.MinRunes(3)):
    1:475
    1:432
    1:475
    ./datatest/tests.cue:38:18
-- out/generate-v3/notMultiple --
notMultiple.data.multiple: invalid value 1 (does not satisfy math.MultipleOf(5)):
    1:221
    ./datatest/tests.cue:22:18
-- out/generate-v3/ok --
-- out/generate-v3/stringTooLong --
stringTooLong.data.shortString: invalid value "01234567890" (does not satisfy strings.MaxRunes(10)):
    1:343
    1:343
    ./datatest/tests.cue:14:21
-- out/generate-v3/stringTooShort --
stringTooShort.data.longString: invalid value "x" (does not satisfy strings.MinRunes(5)):
    1:178
    1:178
    ./datatest/tests.cue:18:20
